# digital-caffeine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-02-cli-animations.md  2026-04-03-animation-overhaul.md  2026-04-03-pc98-overhaul.md  2026-04-20-minimal-display-rollback.md
docs/superpowers/specs/: 2026-04-02-cli-animations-design.md  2026-04-03-animation-overhaul-design.md  2026-04-03-pc98-overhaul-design.md  2026-04-20-minimal-display-rollback-design.md
src/digital_caffeine/: __init__.py  __main__.py  animations.py  cli.py  config.py  constants.py  engine.py  icons.py  tray.py
src/digital_caffeine/pc98/: __init__.py  app.py  canvas.py  dialogue.py  palette.py  particles.py  scene.py  sprites.py  status.py
tests/: test_animations.py  test_cli.py  test_config.py  test_engine.py  test_pc98_canvas.py  test_pc98_palette.py  test_pc98_particles.py  test_pc98_scene.py  test_pc98_sprites.py  test_pc98_widgets.py
